# PointCloud-pipeline

./: CMakeLists.txt  Makefile  README.md  run.py
Registration/: README.md  registration.cpp
Registration-pipeline/: CMakeLists.txt  README.md  registration.cpp
Registration-pipeline/include/: utils.h
Registration-pipeline/src/: reg-keypoints.cpp  utils.cpp
include/: modules.h  read_config.h  typedefs.h  utils.h
kdtree_module/: Makefile  README.md  kdtree.cpp
kdtree_module/include/: kdtree.h  utils.h
legacy/Registration-pipeline/: CMakeLists.txt
legacy/Registration-pipeline/include/: typedefs.h
legacy/utils/: plotErrs.py
pcl-1.7/pcl/: horizon_kdtree.h  pcl_config.h
pcl-1.7/pcl/common/: time.h
pcl-1.7/pcl/features/: 3dsc.h  feature.h  fpfh_omp.h  normal_3d.h  normal_3d_omp.h  pfh_tools.h  shot.h
pcl-1.7/pcl/features/impl/: 3dsc.hpp  feature.hpp  fpfh.hpp  fpfh_omp.hpp  normal_3d.hpp  normal_3d_omp.hpp  pfh.hpp  shot.hpp
pcl-1.7/pcl/filters/: statistical_outlier_removal.h
pcl-1.7/pcl/filters/impl/: statistical_outlier_removal.hpp
pcl-1.7/pcl/impl/: point_types.hpp
pcl-1.7/pcl/in_hand_scanner/: ui_help_window.h  ui_main_window.h
pcl-1.7/pcl/io/: boost.h
pcl-1.7/pcl/kdtree/: flann.h  kdtree.h  kdtree_flann.h
pcl-1.7/pcl/kdtree/impl/: kdtree_flann.hpp
pcl-1.7/pcl/registration/: correspondence_estimation.h  correspondence_rejection_sample_consensus.h  icp.h  icp_nl.h
pcl-1.7/pcl/registration/impl/: correspondence_estimation.hpp  icp.hpp  ppf_registration.hpp  transformation_estimation_svd.hpp
pcl-1.7/pcl/search/: kdtree.h  search.h
pcl-1.7/pcl/search/impl/: kdtree.hpp  search.hpp
src/: modules.cpp  pc-registration.cpp  pc_pipeline.cpp  read_config.cpp  utils.cpp
tools/: evaluate_odometry  plot-trajectory.py
utils/: README.md  parse_bin.py  plot-errs.py  plot-trajectory.py  plotErrs-iterNumfixed.py
